# filament

./: .dockerignore  .gitignore  CLAUDE_DESIGN_PROMPT.md  CLAUDE_DESIGN_PROMPT_ABC.md  CONTRACT.md  LICENSE  README.md  wrangler.jsonc
.github/workflows/: cli-release.yml  deploy-backend.yml  deploy-frontend.yml
backend/: app.py  config.py  requirements.txt  signaling.py
backend/tests/: test_pair_codes.py  test_sync.py
cli/: Cargo.toml  README.md  build.rs
cli/src/: codeentry.rs  direct.rs  holepunch.rs  l2.rs  main.rs  net.rs  pake_ceremony.rs  session.rs  sshkeys.rs  ui.rs
cli/tests/: browser-receiver.js  browser-sender.js  gates.sh  holepunch-gates.sh  known-device.js  l2-gates.sh  live-pairing-gate.sh  package-lock.json  package.json  ssh-gates.sh  transport-gates.sh  two-browsers.js
cli/tests/l1a/: README.md  gate1_mutual_key.sh  gate3_wrongpw_burn.sh  gate4_interop.mjs  gate6_downgrade.sh  gate7_noregression.sh  gate8_byte_identity.mjs  gate9_transfer_pake.sh  gate9b_shared_room.sh
deploy/: .env.example  Caddyfile  README.md  api.Dockerfile  docker-compose.yml  scale.sh
deploy/coturn/: turnserver.conf
docs/: L1-pake-protocol.md  SHOWCASE.md  cli-resilience.md  design-c30-convergent-session.md  design-direct-cli-transport.md  design-l2-direct-ladder.md  design-rung2-holepunch.md  design-seamless-ssh.md  launch-checklist.md  observability-state-machine.md  resilience.md
docs/design/: enterprise-async.md  tile-interaction-v2.md  transport-resilience.md
docs/diagrams/: render.py
docs/launch/: CASE-STUDY-takeoff.md  LAUNCH-PACK.md  alternativeto.md  awesome-selfhosted.md  blog-webrtc-failures.md  reddit-selfhosted.md  release-notes-cli-v0.2.1.md  show-hn.md
docs/notes/: code-unification.md
docs/reviews/: linking-unification-map.md
docs/runner/: generic-runner-design.md  jobrunner-challenges.md
docs/security/: web-shell-review.md
experiments/: probe.py  robust_test.sh  test_liveness.py
experiments/localsend-discovery/: README.md  discovery.js  package.json
experiments/py/: README.md  requirements.txt  run_interop.sh  test_crypto.py
experiments/py/filament_lab/: __init__.py  crypto.py  driver.py  peer.py  signaling.py
experiments/ux/: .gitignore  Makefile  README.md  README.pipeline.md  gallery.py  package-lock.json  package.json  pipeline.sh  record.sh  run.sh  scenarios.sh  timings.txt  web-scenarios.sh
experiments/ux/casts/: 01.cast  02.cast  03.cast  04.cast  05.cast  06.cast  07.cast  08-cli.cast  09-cli.cast  10-cli.cast  11.cast
experiments/ux/gallery/: index.html  reels.html  results.json
experiments/ux/lib/: driver.cjs  journeys.sh  pairing.sh  peers.sh  pwa-serve.sh  quality.sh  update_gallery.py
experiments/ux/reels/: index.html  record-reels.cjs
experiments/ux/rig/: lib.sh
experiments/ux/web/: e2e-cmdk.cjs  e2e-device-sheet.cjs  e2e-pair-device.cjs  e2e-pwa-update.cjs  e2e-sessions-dock.cjs  e2e-webshell.cjs  journey-drag-build.cjs  journey-phone-shell.cjs  journey-phone-to-laptop.cjs  journey-send-bigfile.cjs  pair-with-cli.js  recv-by-code.js  send-to-cli-novideo.js  send-to-cli.js
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json  vite.config.js  wrangler.jsonc
frontend/public/: _redirects  about.html  faq.html  manifest.webmanifest  robots.txt  sitemap.xml  sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/lib/: api.js  devices.js  linkdiag.js  log.js  pairing.js  predict.js  session.js  signaling.js  tel.js  useFilament.js  useQuickshare.js  webrtc.js  words.js
frontend/src/pake/: filament_pake.d.ts  filament_pake.js  filament_pake_bg.wasm  filament_pake_bg.wasm.d.ts
frontend/src/ui/: AnnotationOverlay.jsx  CommandPalette.jsx  DeviceSheet.jsx  DiagPanel.jsx  Filament.jsx  TerminalPreview.jsx  WebTermPreview.jsx  WebTerminal.jsx
frontend/tests/: p1-relay-rebuild-harness.jsx  p1-relay-rebuild.spec.cjs  p5-upgrade-prober-harness.jsx  p5-upgrade-prober.spec.cjs  pake-ux.spec.cjs  pakekeep-harness.jsx  relay-honesty-harness.jsx  relay-honesty.spec.cjs
lab/: README.md  lab
lab/.state/: .gitignore
lab/labkit/: __init__.py  cli.py  context.py  doctor.py  engine.py  netns.py  state.py  topology.py
lab/primitives/: __init__.py  crypto.py  fault.py  frame.py  route.py  tun.py  tun_io.py
lab/probe/: probe.py
lab/providers/: __init__.py  fil_relay.py  filament.py  pipe.py  udp.py  udp_relay.py  underlay.py  wg.py
lab/resources/: primitives-reference.md  safety-runbook.md  topology-schema.md
lab/skill/: SKILL.md
lab/tests/: test_e2e.sh  test_unit.py
lab/topologies/: filament-l3.yml  two-nodes.yml  wg-pair.yml
packaging/: release-followup.sh
packaging/brew/: filament.rb.tmpl
packaging/winget/: Abdk4Moura.Filament.installer.yaml.tmpl  Abdk4Moura.Filament.locale.en-US.yaml.tmpl  Abdk4Moura.Filament.yaml.tmpl
pake/: Cargo.toml  build-wasm.sh
pake/src/: lib.rs  words.rs
runner/: README.md  box_executor.py  bringup_t4.sh  filament_runner.py  pair_host.sh  run_local_test.sh  runner_cli.py  test_e2e.py  up_supervisor.sh  watcher.py
runner/sim/: data_freeze_test.sh  flaky_e2e.py  flaky_proxy.py  flaky_sim_test.sh  relay_fallback_test.sh  relay_upgrade_test.sh  signaling_drop_test.sh  test_resilience_unit.py  truncation_ack_test.sh  warm_standby_test.sh
scripts/: install.sh  publish-showcase.sh  tel-watch.py
showcase/: package.json  wrangler.jsonc
showcase/src/: index.ts
spike/: run.sh
spike/pake-core/: Cargo.toml  interop.js
spike/pake-core/src/: lib.rs
spike/pake-demo/: Cargo.toml
spike/pake-demo/src/: main.rs
