[package]
name = "filament"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
futures-util = "0.3.32"
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
webrtc = "0.17.1"
