[package]
name = "filament-cli"
version = "0.2.0"
edition = "2024"
description = "P2P file transfer between terminals and browsers — no upload, no account. The terminal end of filament.autumated.com."
license = "MIT"
repository = "https://github.com/Abdk4Moura/filament"
homepage = "https://filament.autumated.com"
readme = "README.md"
keywords = ["p2p", "file-transfer", "webrtc", "cli", "airdrop"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "filament"
path = "src/main.rs"

[features]
# Fully static builds (musl): compile OpenSSL from source instead of linking
# the system one. rust_socketio hard-depends on native-tls, so a rustls-only
# tree is not possible without forking it upstream (ledger C16).
static = ["dep:openssl-sys"]

[dependencies]
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["json"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
rustls = { version = "0.23.40", features = ["ring"] }
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4.46"
tokio = { version = "1.52.3", features = ["full"] }
webrtc = "0.17.1"
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
flate2 = "1.1.9"
qrcode = { version = "0.14.1", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
