[package]
name = "filament-cli"
version = "0.2.1-beta.5"
edition = "2024"
description = "P2P file transfer between terminals and browsers — no upload, no account. The terminal end of filament.autumated.com."
license = "MIT"
repository = "https://github.com/Abdk4Moura/filament"
homepage = "https://filament.autumated.com"
readme = "README.md"
keywords = ["p2p", "file-transfer", "webrtc", "cli", "airdrop"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "filament"
path = "src/main.rs"

[features]
# Fully static builds (musl): compile OpenSSL from source instead of linking
# the system one. rust_socketio hard-depends on native-tls, so a rustls-only
# tree is not possible without forking it upstream (ledger C16).
static = ["dep:openssl-sys"]
# Env-gated fault/injection hooks used ONLY by the resilience gates
# (runner/sim/*). NOT in `default` and NOT pulled by the release profile, so a
# default `cargo build --release` (what users install) strips every test hook
# from the binary — no `FILAMENT_TEST_*` env reads, no corruption/freeze/drop
# injection logic. Build the gates' binary with `--features test-hooks`.
test-hooks = []

[dependencies]
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["json"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
rustls = { version = "0.23.40", features = ["ring"] }
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4.46"
tokio = { version = "1.52.3", features = ["full"] }
webrtc = "0.17.1"
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
flate2 = "1.1.9"
qrcode = { version = "0.14.1", default-features = false }
# web-shell: spawn a login shell in a PTY and bridge it to the browser terminal.
portable-pty = "0.8"
# L1-a: the shared SPAKE2 PAKE core (also compiles to wasm for the browser).
filament-pake = { path = "../pake" }
# rung-1 direct CLI<->CLI transport (FILAMENT_DIRECT=1). ring crypto to match
# the rest of the rustls tree; we hand quinn an explicit ring-based config so
# no process-default crypto provider is required.
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rcgen = { version = "=0.13.2", default-features = false, features = ["ring", "pem"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
