# SPIKE — shared SPAKE2 core, compiles to BOTH native and wasm32.
[package]
name = "pake-core"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spake2 = "=0.4.0"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
hex = "0.4"
rand_core = "0.6"

# wasm32 needs getrandom's js backend (OsRng -> crypto.getRandomValues).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
